--- a/services.html
+++ b/services.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <title>Services - SAIEN</title>
-    <link rel="alternate icon" href="assets/logo.png" type="image/png" />
-    <link rel="stylesheet" href="assets/home.css" />
-    <link rel="stylesheet" href="assets/services.css" />
+    <link rel="alternate icon" href="./assets/logo.png" type="image/png" />
+    <link rel="stylesheet" href="./assets/home.css" />
+    <link rel="stylesheet" href="./assets/services.css" />
   </head>
   <body>
     <header>
       <div class="logo-container">
-        <img src="assets/logo.svg" alt="SAIEN Logo" />
+        <img src="./assets/logo.svg" alt="SAIEN Logo" />
         <span class="site-title">SAIEN</span>
       </div>
       <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html" class="active">Services</a>
-        <a href="contact.html">Contact</a>
+        <a href="./index.html">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./services.html" class="active">Services</a>
+        <a href="./contact.html">Contact</a>
       </nav>
     </header>
 
