--- a/about.html
+++ b/about.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <title>About Us - SAIEN</title>
-    <link rel="icon" href="assets/logo.svg" type="image/svg+xml" />
-    <link rel="alternate icon" href="assets/logo.png" type="image/png" />
-    <link rel="stylesheet" href="assets/home.css" />
-    <link rel="stylesheet" href="assets/about.css" />
+    <link rel="icon" href="./assets/logo.svg" type="image/svg+xml" />
+    <link rel="alternate icon" href="./assets/logo.png" type="image/png" />
+    <link rel="stylesheet" href="./assets/home.css" />
+    <link rel="stylesheet" href="./assets/about.css" />
   </head>
   <body>
     <header>
       <div class="logo-container">
-        <img src="assets/logo.svg" alt="SAIEN Logo" />
+        <img src="./assets/logo.svg" alt="SAIEN Logo" />
         <span class="site-title">SAIEN</span>
       </div>
       <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html" class="active">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
+        <a href="./index.html">Home</a>
+        <a href="./about.html" class="active">About</a>
+        <a href="./services.html">Services</a>
+        <a href="./contact.html">Contact</a>
       </nav>
     </header>
 
