--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
     <meta name="author" content="SAIEN" />
 
     <title>SAIEN - Innovative Solutions</title>
-    <link rel="icon" href="assets/logo.svg" type="image/svg+xml" />
-    <link rel="alternate icon" href="assets/logo.png" type="image/png" />
-    <link rel="stylesheet" href="assets/home.css" />
+    <link rel="icon" href="./assets/logo.svg" type="image/svg+xml" />
+    <link rel="alternate icon" href="./assets/logo.png" type="image/png" />
+    <link rel="stylesheet" href="./assets/home.css" />
   </head>
   <body>
     <header>
       <div class="logo-container">
-        <img src="assets/logo.svg" alt="SAIEN Logo" />
+        <img src="./assets/logo.svg" alt="SAIEN Logo" />
         <span class="site-title">SAIEN</span>
       </div>
       <nav>
-        <a href="index.html" class="active">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
+        <a href="./index.html" class="active">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./services.html">Services</a>
+        <a href="./contact.html">Contact</a>
       </nav>
     </header>
 
